[package]
name = "rtml"
version = "0.10.0"
edition = "2021"
license-file = "../LICENSE"
description = "(r)ust macros for h(tml) expansion => rtml.\n (r)ust type safe (css) => rcss."
documentation = "https://docs.rs/rtml"
repository = "https://github.com/coffeebe4code/rtml.git"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.11"
